--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,11 @@
             android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
 
+        <item android:id="@+id/nav_notifiction"
+            android:icon="@drawable/ic_baseline_notifications_24"
+            android:title="Notification"
+            />
+
         <item android:id="@+id/nav_search"
             android:icon="@drawable/ic_search"
             android:title="Property search"
@@ -27,19 +32,15 @@
 
         <item
             android:id="@+id/nav_historyTenant"
-            android:icon="@drawable/ic_post"
+            android:icon="@drawable/ic_baseline_history_24"
             android:title=" Rental history of the tenant"
             />
 
         <item android:id="@+id/nav_historyAgency"
-            android:icon="@drawable/ic_post"
+            android:icon="@drawable/ic_baseline_history_24"
             android:title="  Rental history agency,"
             />
 
-        <item android:id="@+id/nav_menu"
-            android:icon="@drawable/ic_post"
-            android:title="Rental Application Menu"
-            />
 
         <item android:id="@+id/nav_profile_agency"
             android:icon="@drawable/ic_profile"
@@ -48,7 +49,7 @@
 
         <item android:id="@+id/nav_profile_tenent"
             android:icon="@drawable/ic_profile"
-            android:title="Profile"
+            android:title="Profile Tenant"
             />
 
         <item android:id="@+id/logut_frag"
