--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/connect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hotel"
+    android:background="@drawable/hous"
     android:orientation="horizontal"
     tools:context=".MainActivity">
 
